style.css
* {
    margin: 0%;
    padding: 0%;
    box-sizing: border-box;
}


.sec-nav {
    background-color: #ffffff;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px
}

.sec-nav,ul,li {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-inline: 20px;
    font-weight: 400;
    font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;

}

.sec-nav {
    margin-inline: 0px;
}

.items , a{
    text-decoration: none;
    font-size: 17px;
    margin-bottom: 10px;
}

.input input {
    text-align: center;
    width: 250px;
    margin-right: 40px;
    margin-left: 190px;
}

p {
    font-size: 12px;
}

.icons {
    margin-inline: 8px;
}

i {
    display: flex;
    justify-content: center;

}


/* .horizontal-line {
    margin-bottom: 10px;
    opacity: 0.2;
    height: 0.3px;
} */

.visibility {
    display: none;
}


.horizontal-line2 {
    margin-bottom: 10px;
    margin-top: 5px;
    background-color: white;
    
}

span {
    color: rgb(223, 77, 77);
}

.men-section-items {
    background-color: rgb(255, 255, 255);
    position: absolute;
    /* display: flex; */
    height: 400px;
    width: 1180px;
    left: 130px;
    padding-top: 10px;
    padding-left: 21px;
    padding-right: 10PX;
    padding-bottom: 15px;
    /* margin-bottom: 80px; */
    z-index: 10;
    margin-top: 10px;
    font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, ;
}

.women-section-items {
    background-color: rgb(255, 255, 255);
    /* display: flex; */
    position: absolute;
    height: 400px;
    width: 1180px;
    /* top: 5px; */
    /* right: 1px; */
    left: 130px;
    padding-top: 10px;
    padding-left: 21px;
    padding-right: 10PX;
    padding-bottom: 15px;
    z-index: 10;
    margin-top: 10px;
    font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, ;
}

.kids-section-items {
    background-color: rgb(255, 255, 255);
    /* display: flex; */
    position: absolute;
    height: 400px;
    width: 1180px;
    /* top: 100px;
    right: 1px; */
    left: 130px;
    padding-top: 10px;
    padding-left: 21px;
    padding-right: 10PX;
    padding-bottom: 15px;
    z-index: 10;
    margin-top: 10px;
    font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, ;
}

.home-section-items {
    background-color: rgb(255, 255, 255);
    /* display: flex; */
    position: absolute;
    height: 400px;
    width: 1180px;
    /* top: 100px;
    right: 1px; */
    left: 130px;
    padding-top: 10px;
    padding-left: 21px;
    padding-right: 10PX;
    padding-bottom: 15px;
    z-index: 10;
    margin-top: 10px;
    font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, ;
    
}

.beauty-section-items {
    background-color: rgb(255, 255, 255);
    /* display: flex; */
    position: absolute;
    width: 1180px;
    height: 400px;
    /* top: 100px;
    right: 1px; */
    left: 130px;
    padding-top: 10px;
    padding-left: 21px;
    padding-right: 25px;
    padding-bottom: 15px;
    z-index: 10;
    margin-top: 10px;
    font-family: Assistant, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, ;
}

.icons-section-items {
    position: absolute;
    background-color: rgb(255, 255, 255);
    left: 1050px;
    top: 80px;
    padding-top: 10px;
    padding-left: 10px;
    text-align: center;
    align-items: center;
    justify-content: center;
    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
    width: 200px;
}

/* .items {
    padding-bottom: px;
} */

.col-1 {
    float: left;
    padding-right: 50px;
}

.col-2 {
    float: left;
    padding-right: 50px;
    
}

.col-3 {
    float: left;
    padding-right: 50px;
}

.col-4 {
    float: left;
    padding-right: 50px;
}

.col-5 {
    float: left;
    padding-right: 50px;
}

.mySlides {
    padding-top: 10px;
    padding-left: 20px;
    z-index: 10;

}

p {
    font-size: 12px;
}

.icons {
    margin-inline: 8px;
    height: 100%;
}

i {
    display: flex;
    justify-content: center;


}

.button {
    padding: 10px 20px;
    border-radius: 20px;
    border: none;
    font-size: 10px;
    cursor: pointer;
}

.signup-button {
    background-color: rgb(250, 208, 157);
    color: #fff;
    width: 90px;
    text-align: left;
}

.login-button {
    background-color: #E0F2F1;
    color: #020202;
    margin-left: -30px;
    width: 90px;
    text-align: center;
}

.login-button:hover {
    background-color: bisque;
}

.pic {
    padding-left: 10px;
}

.list {
    text-align: center;

}

/* Responsive Design */
@media (max-width: 1024px) {
    .men-section-items, .women-section-items, .kids-section-items, .home-section-items, .beauty-section-items {
        width: 90%;
        left: 5%;
        height: auto;
        overflow-y: auto;
        max-height: 80vh;
    }
    
    .sec-nav {
        flex-wrap: wrap;
        padding: 10px;
    }
    
    .input input {
        margin: 10px 0;
        width: 100%;
    }
}

@media (max-width: 768px) {
    .sec-nav {
        display: grid;
        grid-template-areas: 
            "logo icons"
            "search search";
        gap: 10px;
        padding: 15px;
    }
    
    .head {
        grid-area: logo;
        justify-self: start;
    }
    
    .icons {
        grid-area: icons;
        display: flex;
        justify-self: end;
        gap: 15px;
        margin: 0;
    }

    .icons p {
        display: none; /* Hide labels like 'Profile' on mobile to save space */
    }
    
    .input {
        grid-area: search;
        width: 100%;
        margin: 0;
    }
    
    .input input {
        width: 100%;
        margin: 0;
        height: 40px;
        border-radius: 8px;
        border: 1px solid #ddd;
    }
    
    .sec-nav ul {
        display: none; /* Hide main menu for now */
    }
    
    .slideshow-container {
        padding: 0 10px;
    }

    .slideshow-container img {
        height: 200px !important; /* Fixed height for mobile slideshow */
        object-fit: cover; /* Prevents stretching */
        width: 100% !important;
        border-radius: 15px !important;
    }
    
    .men-section-items, .women-section-items, .kids-section-items, .home-section-items, .beauty-section-items {
        display: none !important;
    }
}

